tests/ui/associated-types/bound-lifetime-in-binding-only.ok.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/bound-lifetime-in-binding-only.rs:71:1
   |
LL | fn main() { }
   | ^^^^^^^^^

error: aborting due to previous error

